# typed-json

./: .gitignore  LICENSE  README.md  pyproject.toml  typed_json.py
.github/workflows/: pythonpackage.yml
tests/: models.py  test_converter.py  test_raise.py  test_register.py
