[tool.poetry]
name = "typed_json"
version = "0.1.0"
description = ""
authors = ["Thong <ththong@sk-global.biz>"]

[tool.poetry.dependencies]
python = "^3.5"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
